fixes link-clipping; fixes incorrect clipboard paste; fixes font-size for small devices;

--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ main {
   -ms-user-select: none;
   user-select: none;
   overflow: hidden;
+  transition: all 250ms;
 }
 
 #board_screen article p {
@@ -209,6 +210,7 @@ main {
   width: 440px;
   padding: 4px 15px;
   margin-top: 100px;
+  margin-bottom: 20px;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -271,6 +273,7 @@ main {
   transform: translateY(calc(100% + 5px));
   z-index: 2;
   opacity: 0;
+  user-select: none;
 }
 
 .tooltip.show_tooltip {
@@ -408,11 +411,12 @@ main {
     grid-template-columns: repeat(5, 70px);
     grid-template-rows: repeat(5, 70px);
     grid-gap: 2px;
-    font-size: 12px;
+    font-size: 10px;
   }
 
   #board_screen article {
-    height: 69px;
+    height: 70px;
+    width: 70px;
     padding: 3px;
     box-sizing: border-box;
   }
